<?xml version="1.0"?>
<package format="2">
  <name>ay_fv_extra</name>
  <version>0.0.0</version>
  <description>The ay_fv_extra package</description>

  <author email="info@akihikoy.net">Akihiko Yamaguchi</author>
  <maintainer email="info@akihikoy.net">Akihiko Yamaguchi</maintainer>
  <license>Described in LICENSE</license>
  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
